Fixed nav button's z-index to make it clickable

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    z-index: 3;
 }
 
 .main {
